migration to jersey